--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
     "silex/silex": "^2.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7"
+    "phpunit/phpunit": "^5.7",
+    "phpunit/phpcov": "^3.1",
+    "satooshi/php-coveralls": "^1.0"
   },
   "autoload": {
     "psr-4": {
